# aoc_2018

./: .gitignore  .pre-commit-config.yaml  01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.c  09.py  10.py  11.py  12.py  13.py  d14.py  pyproject.toml
input/: 09.txt
tests/: test_14.py
