[tool.poetry]
name = "aoc_2018"
version = "0.1.0"
description = ""
authors = ["Mathieu Lemay <acidrain1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
psutil = "^5.6.7"
numpy = "^1.17.4"

[tool.poetry.dev-dependencies]
pre-commit = "^1.20.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
